--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 args==0.1.0
-Flask==0.12.2
-Flask-Cors==3.0.2
+Flask>=1.0.0
+Flask-Cors>=3.0.9
 gunicorn==19.7.1
-Jinja2==2.9.6
+Jinja2>=2.11.3
 numpydoc==0.6.0
 pandas==0.20.2
 scipy==0.19.1
 six==1.15.0
 tensorflow
 tflearn==0.3.2
-Werkzeug==0.12.2
+Werkzeug>=0.15.3
