--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ gunicorn==19.7.1
 Jinja2>=2.11.3
 numpydoc==0.6.0
 pandas==0.20.2
+conda
+setuptools
 scipy==0.19.1
 six==1.15.0
 tensorflow
 tflearn==0.3.2
 Werkzeug>=0.15.3
+
