--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ gunicorn==19.7.1
 Jinja2>=2.11.3
 numpydoc==0.6.0
 pandas==0.20.2
-conda
-pip
+miniconda
+pip==21.2.4
 setuptools
 six==1.15.0
 tensorflow
